--- a/style.css
+++ b/style.css
@@ -8,17 +8,24 @@ body{
     background-color: rgb(39, 38, 38);
     display: flex;
     flex-direction: column;
-    height: 100vh;
-    overflow: hidden;
     padding: 20px;
     color: gray;
+    font-size: 1.2em;
+    text-align: center;
 }
 
+a:visited{
+    color: gray;
+}
 .main{
     display: flex;
     padding: 20px;
-    /* flex-direction: column; */
-    
+    flex-flow: row wrap;
+    justify-content: space-around;
+    align-items:center;
+    width: 100%;
+    row-gap: 30px;
+    column-gap: 2em;
 }
 
 .div-day{
@@ -31,10 +38,26 @@ body{
     border: 1px solid #646464;
     border-radius: 20px;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.499);
+   flex: 1;
 }
 
-.div-day h2{
+.div-day p{
     margin-bottom: 20px;
+}
+
+.day{
+    border: 6px outset white;
+    background: linear-gradient(rgb(43, 1, 60), rgb(1, 22, 60));
+    border-radius: 20px;
+    height: 250px;
+    width: 250px;
+    padding: 10px;
+    /* background-color: lightblue; */
+    margin: 5px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .day1{
@@ -45,6 +68,7 @@ body{
     width: 250px;
     padding: 10px;
     /* background-color: lightblue; */
+    margin: 5px;
     text-align: center;
     display: flex;
     justify-content: center;
