--- a/style.css
+++ b/style.css
@@ -65,6 +65,9 @@ a:active{
     align-items: center;
 }
 
+/*
+    day1 emoji alien
+*/
 .day1{
     border: 6px outset white;
     background: linear-gradient(rgb(43, 1, 60), rgb(1, 22, 60));
@@ -164,7 +167,73 @@ a:active{
     background-color: transparent;
     cursor:wait;
 }
+/* fim emojialien */
 
+
+/*
+    day3 geek óculos
+*/
+.oculos{
+    width: 100%;
+    height: 50%;
+    display: flex;
+    /* background-color: #6a87b2; */
+    padding: 10px;
+    align-items: center;
+    justify-content: center;
+}
+
+.eyeL, .eyeR,.haste{
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    border: 4px solid white;
+    /* padding: 1px; */
+    position: relative;
+    margin: 0;
+    z-index: 2;
+}
+
+.eyeL, .eyeR{
+    background-color: rgba(196, 194, 194, 0.3);
+    box-shadow: 2px 2px 4px rgba(255, 255, 255, 0.2) inset;
+}
+
+.eyeL::after, .eyeR::after, .eyeL::before,.eyeR::before{
+    content: "";
+    display: block;
+    width: 30px;
+    height: 5px;
+    border-radius: 5px;
+    /* background-color: rgba(255, 255, 255, 0.5); */
+    transform: rotate(-30deg);
+    position: relative;
+    top: 45px;
+    left: 35px;
+    box-shadow: 0px 2px rgba(255, 255, 255, 0.2);
+}
+
+.eyeL::before,.eyeR::before{
+    width: 20px;
+    height: 5px;
+    top: 54px;
+    left: 42px;
+}
+
+.haste{
+    border: 3px solid transparent;
+    border-top-color: white;
+    margin: 0 -7px;
+    width: 40px;
+    height: 30px;
+    top: 5px;
+    z-index: 1;
+
+}
+
+/*
+    day4 rainbow
+*/
 .c{
     width: 100%;
     height: 100%;
@@ -240,6 +309,10 @@ a:active{
     100%{  background-color: greenyellow;}
 }
 
+
+/*
+    day6 moeda
+*/
 .moeda{
     width: 140px;
     height: 180px;
@@ -262,11 +335,6 @@ a:active{
     animation: giro 0s;
 }
 
-@keyframes giro {
-    0% {transform: rotateY(0deg);}
-    50% {transform: rotateY(360deg);}
-}
-
 .number1b{
     width: 20px;
     height: 110px;
@@ -284,73 +352,10 @@ a:active{
     margin-left: -10px;
 }
 
-.day3{
-    border: 6px outset white;
-    background: linear-gradient(rgb(43, 1, 60), rgb(1, 22, 60));
-    border-radius: 20px;
-    height: 250px;
-    width: 250px;
-    padding: 40px;
-    /* background-color: lightblue; */
-    margin: 5px;
-    text-align: center;
-    /*display: flex;
-    justify-content: center;
-    align-items: center; */
-}
 
-/* rgb(159, 93, 93); */
 
-.fundo {
-    background-color: rgb(159, 93, 93);
-    height: 150px;
-    width: 150px;
-    border-radius: 10px 20px 6px 6px;
-    position: relative;
-    z-index: 1;
-}
-
-.fundo::after{
-    content: "";
-    display: block;
-    background-color: #6a87b2;
-    width: 190px;
-    height: 20px;
-    border-radius: 20px;
-    top: 2px;
-    position: relative;
-    right: 20px;
-    box-shadow: inset 6px 0 rgb(23, 75, 90);
-
-}
-
-.frente {
-    background-color: rgb(233, 139, 139);
-    height: 180px;
-    width: 150px;
-    border-radius: 4px 20px 6px 6px;
-    position: relative;
-    left: 10px;
-    z-index: 2;
-    bottom: 150px;
-}
-
-.frente::after {
-    padding-top: 10px;
-    font-size: 26px;
-    color: white;
-    font-weight: bold;
-    content: "42";
-    background-color: rgb(232, 185, 185);
-    height: 50px;
-    width: 150px;
-    border-top: 4px dotted white;
-    border-bottom: 4px dotted white;
-    position: relative;
-    display: block;
-    top: 110px;
-}
-
+/**** - BONUS - ****/
+/* bonus 1 - 42 */
 .bonus42{
     background-image:linear-gradient(white, white);
     border-radius: 10px;
@@ -429,3 +434,83 @@ a:active{
     top: 18px;
     left: 44px;
 }
+
+.bonus42:hover{
+    animation: giro 2s 1 linear ;
+    cursor: pointer;
+}
+
+/* bonus 4 - toalha */
+.toalha{
+    border: 6px outset white;
+    background: linear-gradient(rgb(43, 1, 60), rgb(1, 22, 60));
+    border-radius: 20px;
+    height: 250px;
+    width: 250px;
+    padding: 40px;
+    /* background-color: lightblue; */
+    margin: 5px;
+    text-align: center;
+    /*display: flex;
+    justify-content: center;
+    align-items: center; */
+}
+
+/* rgb(159, 93, 93); */
+
+.fundo {
+    background-color: rgb(159, 93, 93);
+    height: 150px;
+    width: 150px;
+    border-radius: 10px 20px 6px 6px;
+    position: relative;
+    z-index: 1;
+}
+
+.fundo::after{
+    content: "";
+    display: block;
+    background-color: #6a87b2;
+    width: 190px;
+    height: 20px;
+    border-radius: 20px;
+    top: 2px;
+    position: relative;
+    right: 20px;
+    box-shadow: inset 6px 0 rgb(23, 75, 90);
+
+}
+
+.frente {
+    background-color: rgb(233, 139, 139);
+    height: 180px;
+    width: 150px;
+    border-radius: 4px 20px 6px 6px;
+    position: relative;
+    left: 10px;
+    z-index: 2;
+    bottom: 150px;
+}
+
+.frente::after {
+    padding-top: 10px;
+    font-size: 26px;
+    color: white;
+    font-weight: bold;
+    content: "42";
+    background-color: rgb(232, 185, 185);
+    height: 50px;
+    width: 150px;
+    border-top: 4px dotted white;
+    border-bottom: 4px dotted white;
+    position: relative;
+    display: block;
+    top: 110px;
+}
+
+/* animations */
+@keyframes giro {
+    0% {transform: rotateY(0deg);}
+    50% {transform: rotateY(360deg);}
+}
+
