--- a/style.css
+++ b/style.css
@@ -67,6 +67,7 @@ a:active {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    overflow: hidden;
 }
 
 /*
@@ -334,7 +335,8 @@ a:active {
 
 }
 
-.bolt, .energy{
+.bolt,
+.energy {
     content: "";
     background-color: goldenrod;
     display: block;
@@ -346,7 +348,8 @@ a:active {
     top: -20px;
 }
 
-.bolt::before, .energy::before {
+.bolt::before,
+.energy::before {
     content: "";
     background-color: goldenrod;
     display: block;
@@ -358,7 +361,8 @@ a:active {
     transform: skewX(0deg);
 }
 
-.bolt::after, .energy::after {
+.bolt::after,
+.energy::after {
     content: "";
     background-color: goldenrod;
     display: block;
@@ -370,25 +374,28 @@ a:active {
     transform: skewX(0deg);
 }
 
-.energy{
+.energy {
     transform: skew(-30deg) scale(70%);
     left: 0px;
     top: 0px;
     box-shadow: 2px 2px #000;
 }
 
-.energy, .energy::after, .energy::before{
+.energy,
+.energy::after,
+.energy::before {
     border-radius: 6px;
 }
-.energy::before{
+
+.energy::before {
     top: -33px;
 }
 
-.energy::after{
+.energy::after {
     box-shadow: 2px 2px #000;
 }
 
-.energy-box{
+.energy-box {
     width: 150px;
     height: 250px;
     display: flex;
@@ -399,7 +406,8 @@ a:active {
     transform: scale(80%);
 }
 
-.energy-top, .energy-bottom{
+.energy-top,
+.energy-bottom {
     background-color: grey;
     width: 150px;
     height: 100px;
@@ -407,28 +415,29 @@ a:active {
     border: 10px grey solid;
 }
 
-.energy-top{
+.energy-top {
     width: 60px;
     height: 40px;
     border-radius: 10px;
     margin-bottom: -10px;
 }
 
-.energy-bottom{
+.energy-bottom {
     height: 200px;
     padding: 5px;
     display: flex;
     flex-direction: column;
-    justify-content:space-evenly;
+    justify-content: space-evenly;
 }
-.energy-bottom div{
+
+.energy-bottom div {
     width: 100%;
     height: 25px;
     background-color: yellowgreen;
     border-radius: 20px;
 }
 
-.day22{
+.day22 {
     flex-direction: row;
     padding-top: 30px;
 }
@@ -577,7 +586,76 @@ a:active {
     margin-left: -10px;
 }
 
+/* Day 23 - DNA  */
+.dna {
+    width: 100px;
+    height: 160px;
+    border: 6px deepskyblue solid;
+    border-radius: 50%;
+    /* background-color: #646464; */
+    padding: 10px 5px 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    position: relative;
+}
 
+.dna-div {
+    width: 80%;
+    height: 6px;
+    background-color: transparent;
+    border-radius: 20px;
+    position: relative;
+    margin-bottom: 12px;
+    display: flex;
+
+}
+
+.dna-div:first-child,
+.dna-div:nth-child(6) {
+    width: 60%;
+}
+
+.dna-div:nth-child(2) {
+    width: 90%;
+}
+
+.dna-div:nth-child(3),
+.dna-div:nth-child(4) {
+    width: 100%;
+}
+
+.dna-div:nth-child(5) {
+    width: 90%;
+}
+
+.dna-div::before,
+.dna-div::after {
+    content: "";
+    display: block;
+    width: 50%;
+    height: 5px;
+    background-color: deeppink;
+    border-radius: 10px;
+    position: relative;
+}
+
+.dna-div::before {
+    background-color: yellowgreen;
+    border-radius: 20px;
+}
+
+.box-dna {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    transform: rotate(45deg) scale(80%) skew(10deg);
+}
 
 /**** - BONUS - ****/
 /* bonus 1 - 42 */
@@ -733,12 +811,6 @@ a:active {
     top: 110px;
 }
 
-/* Day 22 - DNA  */
-.dna{
-    width: 100px;
-    height: 100px;
-    border: #000 4xp dashed;
-}
 
 /* animations */
 @keyframes spin {
